# isfdb-awards-parser

./: .gitignore  README.md  pyproject.toml
isfdb/: scrapy.cfg
isfdb/isfdb/: items.py  middlewares.py  pipelines.py  settings.py
isfdb/isfdb/spiders/: awards.py
src/isfdb/: format_awards.py  items.py  pipelines.py  settings.py
src/isfdb/spiders/: awards.py
